# annovar-db-sync

./: .gitignore  NOTICE  README.md  environment.yml  pyproject.toml
src/annovar_db_sync/: __init__.py  cli.py  clinvar.py  config.py  converter.py  downloader.py  intervar.py  lock_file.py  logger.py
tests/: conftest.py  test_cli.py  test_clinvar.py  test_converter.py  test_downloader.py  test_intervar.py  test_lock_file.py
